trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/sObject_Trigger_Setting__mdt.object-meta.xml
<CustomObject>
    <label>sObject Trigger Setting</label>
    <pluralLabel>sObject Trigger Settings</pluralLabel>
</CustomObject>