trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/fields/Bypass_Execution__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Execution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this to true to bypass all Trigger Actions from being called on this sObject</description>
    <inlineHelpText>Set this to true to bypass all Trigger Actions from being called on this sObject</inlineHelpText>
    <label>Bypass Execution</label>
    <type>Checkbox</type>
</CustomField>