trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/fields/Flow_Input_Generator_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Input_Generator_Class_Name__c</fullName>
    <description>The name of the class which extends TriggerActionFlow.GenerateTriggerFlowInput that will generate the input for trigger action flows on this sObject.</description>
    <inlineHelpText>The name of the class which extends TriggerActionFlow.GenerateTriggerFlowInput that will generate the input for trigger action flows on this sObject.</inlineHelpText>
    <label>Flow Input Generator Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>