trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/fields/FlowTriggerRecord_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>FlowTriggerRecord_Class_Name__c</fullName>
    <description>The name of the class which extends FlowTriggerRecord that will generate the input for trigger action flows on this sObject.</description>
    <inlineHelpText>The name of the class which extends FlowTriggerRecord that will generate the input for trigger action flows on this sObject.</inlineHelpText>
    <label>FlowTriggerRecord Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>