trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/fields/Formula_Evaluation_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Evaluation_Class_Name__c</fullName>
    <description>Enter the API name of a global class which contains two global properties: `record`
        and `recordPrior`. Both of these variables need to match the SObject type for this SObject
        Trigger Setting record.</description>
    <inlineHelpText>Enter the API name of a global class which contains two global properties:
        `record` and `recordPrior`. Both of these variables need to match the SObject type for this
        SObject Trigger Setting record.</inlineHelpText>
    <label>Formula Evaluation Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>