trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Enter the full API Name of the object for this trigger.</description>
    <inlineHelpText>Enter the full API Name of the object for this trigger.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>