trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/fields/Required_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Permission__c</fullName>
    <description
	>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will only execute if the running user has the custom permission identified.</description>
    <inlineHelpText
	>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will only execute if the running user has the custom permission identified.</inlineHelpText>
    <label>Required Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>