trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Select the sObject you would like to define trigger actions for.</description>
    <inlineHelpText>Select the sObject you would like to define trigger actions for.</inlineHelpText>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>sObject_Trigger_Settings</relationshipLabel>
    <relationshipName>sObject_Trigger_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>