trigger-actions-framework/main/default/objects/sObject_Trigger_Setting__mdt/validationRules/Label_and_Name_Must_Match_sObject.validationRule-meta.xml
<ValidationRule>
    <fullName>Label_and_Name_Must_Match_sObject</fullName>
    <active>true</active>
    <description>The label and name of the metadata must match the selected sObject API name (without __c).</description>
    <errorConditionFormula>MasterLabel !=  SObject__r.DeveloperName || 	
DeveloperName !=  SObject__r.DeveloperName ||	
MasterLabel  !=  DeveloperName</errorConditionFormula>
    <errorMessage>The label and name of the metadata must match the selected sObject API name (without __c).</errorMessage>
</ValidationRule>